// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Body story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--body"
  >
    Body paragraph
  </p>
</div>
`;

exports[`<Text /> BodyLarge story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--lg"
  >
    Body large
  </p>
</div>
`;

exports[`<Text /> BodyMedium story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--md"
  >
    Body medium
  </p>
</div>
`;

exports[`<Text /> BodySmall story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--sm"
  >
    Body small
  </p>
</div>
`;

exports[`<Text /> BodyVariantSuccessBold story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--body text--success text--bold-weight"
  >
    Success variant body text, bold
  </p>
</div>
`;

exports[`<Text /> BodyXSmall story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--xs"
  >
    Body Xsmall
  </p>
</div>
`;

exports[`<Text /> Callout story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--callout"
  >
    Callout
  </p>
</div>
`;

exports[`<Text /> Caption story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--caption"
  >
    Caption
  </p>
</div>
`;

exports[`<Text /> Overline story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--overline"
  >
    Overline
  </p>
</div>
`;

exports[`<Text /> Spacing story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div>
    <p
      class="spacing text text--body text--half-spacing"
    >
      Spacing Half
    </p>
    <p
      class="spacing text text--body text--1x-spacing"
    >
      Spacing 1x
    </p>
    <p
      class="spacing text text--body text--2x-spacing"
    >
      Spacing 2x
    </p>
    <p
      class="spacing text text--body"
    >
      Bottom text to show spacing for spacing 2x
    </p>
  </div>
</div>
`;

exports[`<Text /> TextPassage story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="layout-linelength-container text text--body text-passage text-passage--body"
  >
    <h1>
      Heading 1
    </h1>
    <p>
      A text passage contains arbitrary text that might come from a CMS. It should live within a container that caps the line length of the text to avoid a straining reading experience.
    </p>
    <h2>
      Heading 2
    </h2>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <ul>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
    </ul>
    <h3>
      Heading 3
    </h3>
    <ol>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
    </ol>
    <p>
      <a
        href="/"
      >
        Lorem ipsum dolor sit amet
      </a>
      , consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <blockquote>
      <p>
        This is a quotation from something.
      </p>
      <cite>
        Cite source
      </cite>
    </blockquote>
    <h4>
      Heading 4
    </h4>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <hr />
    <p>
      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <h5>
      Heading 5
    </h5>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <p>
      That is all.
    </p>
  </div>
</div>
`;

exports[`<Text /> TextPassageLarge story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="layout-linelength-container text text--lg text-passage text-passage--lg"
  >
    <h1>
      Heading 1
    </h1>
    <p>
      A text passage contains arbitrary text that might come from a CMS. It should live within a container that caps the line length of the text to avoid a straining reading experience.
    </p>
    <h2>
      Heading 2
    </h2>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <ul>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
    </ul>
    <h3>
      Heading 3
    </h3>
    <ol>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
    </ol>
    <p>
      <a
        href="/"
      >
        Lorem ipsum dolor sit amet
      </a>
      , consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <blockquote>
      <p>
        This is a quotation from something.
      </p>
      <cite>
        Cite source
      </cite>
    </blockquote>
    <h4>
      Heading 4
    </h4>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <hr />
    <p>
      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <h5>
      Heading 5
    </h5>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <p>
      That is all.
    </p>
  </div>
</div>
`;

exports[`<Text /> TextPassageSmall story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="layout-linelength-container text text--sm text-passage text-passage--sm"
  >
    <h1>
      Heading 1
    </h1>
    <p>
      A text passage contains arbitrary text that might come from a CMS. It should live within a container that caps the line length of the text to avoid a straining reading experience.
    </p>
    <h2>
      Heading 2
    </h2>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <ul>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
    </ul>
    <h3>
      Heading 3
    </h3>
    <ol>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
      <li>
        Here is a unordered list item
      </li>
    </ol>
    <p>
      <a
        href="/"
      >
        Lorem ipsum dolor sit amet
      </a>
      , consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <blockquote>
      <p>
        This is a quotation from something.
      </p>
      <cite>
        Cite source
      </cite>
    </blockquote>
    <h4>
      Heading 4
    </h4>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <hr />
    <p>
      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <h5>
      Heading 5
    </h5>
    <p>
      This is another paragraph of text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
    <p>
      That is all.
    </p>
  </div>
</div>
`;

exports[`<Text /> TextVariantInherit story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <p
    class="text text--body text--error"
  >
    This text surrounds the 
    <span
      class="text text--body text--inherit"
    >
      Child Text
    </span>
     and shows it should inherit variant from the parent
  </p>
</div>
`;
